continue previous work

--- a/client/src/app/publications/publications.component.html
+++ b/client/src/app/publications/publications.component.html
@@ -7,7 +7,9 @@
 <div class="cube-portfolio container margin-bottom-60">
   <div class="content-xs">
     <div id="filters-container" class="cbp-l-filters-text content-xs">
-      <p>Citation summaries in <a href="https://scholar.google.com/citations?user=I2pcWZIAAAAJ&hl=en" target=black_>Google scholar</a></p>
+      <p>Citation summaries in
+        <a href="https://scholar.google.com/citations?user=I2pcWZIAAAAJ&hl=en" target=black_>Google scholar</a>
+      </p>
     </div>
     <div id="filters-container" class="cbp-l-filters-text content-xs">
       <span>|</span>
@@ -31,8 +33,8 @@
                   <h4 class="panel-title">
                     <a class="accordion-toggle">
                       <span>{{i+1}}.</span>
-                      <span>{{content.content}}</span>
-                      <!-- <a href="{{content.url}}" target="_blank"></a> -->
+                      <a *ngIf="content.url" href="{{content.url}}" target="_blank">{{content.content}}</a>
+                      <span *ngIf="!content.url">{{content.content}}</span>
                     </a>
                   </h4>
                 </div>
