continue previous work

--- a/client/src/app/members/professor/professor.component.html
+++ b/client/src/app/members/professor/professor.component.html
@@ -6,7 +6,7 @@
       </div>
       <div class="col-md-10">
         <h2>강필성 (Pilsung Kang)</h2>
-        <span><strong>Assistant Professor</strong></span>
+        <span><strong>Associate Professor</strong></span>
         <span>
           <strong>
           School of Industrial Management Engineering,
