continue previous work

--- a/client/src/app/uploader/uploader.component.html
+++ b/client/src/app/uploader/uploader.component.html
@@ -17,7 +17,7 @@
             <br><br>
             <textarea id='dsba-content-editor' data-editor='w'></textarea>
             <br>
-            <a (click)='create_post()'>
+            <a (click)='createPost()'>
               <div class='dsba-create-btn'><span>CREATE</span></div>
             </a>
           </div>
