continue previous work

--- a/client/src/app/uploader/uploader.component.html
+++ b/client/src/app/uploader/uploader.component.html
@@ -28,11 +28,28 @@
       <div class='row'>
         <ul>
           <h2><br>파일 업로드 가이드</h2>
-          <p>상황 별 스토리지는 아래와 같으며, 게시물에 해당 링크의 하이퍼 링크를 삽입해 이용합니다.</p>
-          <li>계정: dsba.koreauniv@gmail</li>
-          <li>비디오 및 음성 멀티미디어: Youtube</li>
-          <li>사진, zip 등 저용량 파일: Google Drive에서 dsba.korea.ac.kr/ 폴더</li>
-          <h2><br></h2>
+          <li>
+            비디오 및 음성 멀티미디어
+            <ul>
+              <li>Youtube</li>
+              <li>게시물의 공유 링크를 이용합니다.</li>
+            </ul>
+          </li>
+          <li>
+            pdf, zip 등 저용량 파일
+            <ul>
+              <li>Google Drive의 dsba.korea.ac.kr/ 폴더</li>
+              <li>게시물의 공유 링크를 이용합니다.</li>
+            </ul>
+          </li>
+          <li>
+            이미지
+            <ul>
+              <li>자유롭게 에디터를 이용해 삽입</li>
+              <li>클라이언트와 구글 스크립트를 이용해 자동으로 업로드 됨</li>
+              <li>업로드 위치는 Google Drive에서 dsba.korea.ac.kr/imgs 폴더</li>
+            </ul>
+          </li>
         </ul>
       </div>
     </div>
