--- a/client/src/app/main/main.component.scss
+++ b/client/src/app/main/main.component.scss
@@ -12,6 +12,7 @@
 
 #da-slider {
   height: 400px;
+  background-image: url('/assets/img/breadcrumbs/hanasquare.jpg');
   background-color: black;
   background-size: contain;
   background-repeat: no-repeat;
