--- a/client/src/app/board/board.component.html
+++ b/client/src/app/board/board.component.html
@@ -7,10 +7,10 @@
 
 <div *ngIf='loading_status' id='dsba-board-loading-box'></div>
 
-<div class="container">
-  <div class="row">
+<div class="container content-sm">
+  <div class="row shs-side-nav">
     <div class="col-md-9" id='daba-board'>
-      <div *ngIf='post' class='row'>
+      <ng-container *ngIf='post'>
         <ng-container *ngIf='updating_status'>
           <div class='daba-post-box'>
             <div class="blog margin-bottom-40">
@@ -84,79 +84,126 @@
             </div>
           </div>
         </ng-container>
-      </div>
+      </ng-container>
 
-      <div class="row">
-        <ul *ngIf='!post' class="pager pager-v3 pager-sm no-margin-bottom">
-          <li class="previous">
-            <a (click)='turnPage(-1)'>← Newer</a>
-          </li>
-          <li *ngIf="post_groups" class="page-amount">
-            {{ post_group.page }} of {{ post_groups.length }}
-          </li>
-          <li class="next">
-            <a (click)='turnPage(+1)'>Older →</a>
-          </li>
-        </ul>
-        <br>
-        <div *ngFor='let post of post_group'>
-          <div *ngIf='!post.thumbnail' class="row">
-            <div class="col-sm-10 news-v3">
-              <div class="news-v3-in-sm no-padding">
-                <ul class="list-inline posted-info">
-                  <li>{{ post.writer }}</li>
-                  <li>In {{ post.category }}</li>
-                  <li>{{ post.date }}</li>
-                </ul>
-                <h2>
-                  <a (click)='showPost(post.idx)' data-_scrollToContent>
-                    {{ post.title }}
-                  </a>
-                </h2>
-                <p [innerHTML]="post.preview" class="-preview"></p>
-                <p class="-preview-cover"></p>
-              </div>
+      <ul *ngIf='!post' class="pager pager-v3 pager-sm no-margin-bottom">
+        <li class="previous">
+          <a (click)='turnPage(-1)'>← Newer</a>
+        </li>
+        <li *ngIf="post_groups" class="page-amount">
+          {{ post_group.page }} of {{ post_groups.length }}
+        </li>
+        <li class="next">
+          <a (click)='turnPage(+1)'>Older →</a>
+        </li>
+      </ul>
+      <br>
+      <div *ngFor='let post of post_group'>
+        <div *ngIf='!post.thumbnail' class="row">
+          <div class="col-sm-10 news-v3">
+            <div class="news-v3-in-sm no-padding">
+              <ul class="list-inline posted-info">
+                <li>{{ post.writer }}</li>
+                <li>In {{ post.category }}</li>
+                <li>{{ post.date }}</li>
+              </ul>
+              <h2>
+                <a (click)='showPost(post.idx)' data-_scrollToContent>
+                  {{ post.title }}
+                </a>
+              </h2>
+              <p [innerHTML]="post.preview" class="-preview"></p>
             </div>
           </div>
-          <div *ngIf='post.thumbnail' class="row dsba-post-with-photo">
-            <div class="col-sm-7 news-v3">
-              <div class="news-v3-in-sm no-padding">
-                <ul class="list-inline posted-info">
-                  <li>{{ post.writer }}</li>
-                  <li>In {{ post.category }}</li>
-                  <li>{{ post.date }}</li>
-                </ul>
-                <h2>
-                  <a (click)='showPost(post.idx)' data-_scrollToContent>
-                    {{ post.title }}
-                  </a>
-                </h2>
-                <p [innerHTML]="post.preview" class="-preview"></p>
-              </div>
-            </div>
-            <div class="col-sm-4 sm-margin-bottom-20">
-              <div class="responsive-video">
-                <img src="{{ post.thumbnail }}">
-              </div>
-            </div>
-          </div>
-          <div class="clearfix"><hr></div>
         </div>
-        <ul class="pager pager-v3 pager-sm no-margin-bottom">
-          <li class="previous">
-            <a (click)='turnPage(-1)'>← Newer</a>
-          </li>
-          <li *ngIf="post_groups" class="page-amount">{{ post_group.page }} of {{ post_groups.length }}</li>
-          <li class="next">
-            <a (click)='turnPage(+1)'>Older →</a>
-          </li>
-        </ul>
-        <br>
+        <div *ngIf='post.thumbnail' class="row dsba-post-with-photo">
+          <div class="col-sm-7 news-v3">
+            <div class="news-v3-in-sm no-padding">
+              <ul class="list-inline posted-info">
+                <li>{{ post.writer }}</li>
+                <li>In {{ post.category }}</li>
+                <li>{{ post.date }}</li>
+              </ul>
+              <h2>
+                <a (click)='showPost(post.idx)' data-_scrollToContent>
+                  {{ post.title }}
+                </a>
+              </h2>
+              <p [innerHTML]="post.preview" class="-preview"></p>
+            </div>
+          </div>
+          <div class="col-sm-4 sm-margin-bottom-20">
+            <div class="responsive-video">
+              <img src="{{ post.thumbnail }}">
+            </div>
+          </div>
+        </div>
+        <div class="clearfix"><hr></div>
       </div>
+      <ul class="pager pager-v3 pager-sm no-margin-bottom">
+        <li class="previous">
+          <a (click)='turnPage(-1)'>← Newer</a>
+        </li>
+        <li *ngIf="post_groups" class="page-amount">{{ post_group.page }} of {{ post_groups.length }}</li>
+        <li class="next">
+          <a (click)='turnPage(+1)'>Older →</a>
+        </li>
+      </ul>
+      <br>
     </div>
 
     <div class="col-md-3">
-      <div id='dsba-right-nav' data-nav>
+      <div id='js-nav' class='-nav'>
+        <div class="headline-v2 bg-color-light"><h2>Latest Posts</h2></div>
+        <ul class="list-unstyled blog-latest-posts margin-bottom-50">
+          <li *ngFor='let post of latest_posts'>
+            <h3><a (click)='showPost(post.idx)'>{{ post.title }}</a></h3>
+            <small>{{ post.date }} / <a>{{ post.category }}</a></small>
+          </li>
+        </ul>
+        <div class="headline-v2 bg-color-light"><h2>Categories</h2></div>
+        <ul class="list-inline tags-v2 margin-bottom-50">
+          <li><a routerLink='/board/notice' data-_initScroll8Nav>Notice</a></li>
+          <li><a routerLink='/board/news' data-_initScroll8Nav>News</a></li>
+          <li><a routerLink='/board/seminar' data-_initScroll8Nav>Seminar</a></li>
+          <li><a routerLink='/board/photo' data-_initScroll8Nav>Photo</a></li>
+          <li><a routerLink='/board/overall' data-_initScroll8Nav>Overall</a></li>
+        </ul>
+        <div class="headline-v2 bg-color-light"><h2>Photostream</h2></div>
+        <ul class="list-inline blog-photostream margin-bottom-50">
+          <li *ngFor='let img of thumbnails.slice(0, 9)'>
+            <span>
+              <img class="img-responsive" src="{{ img }}">
+            </span>
+          </li>
+        </ul>
+      </div>
+      <div id='js-nav--top' class='-nav'>
+        <div class="headline-v2 bg-color-light"><h2>Latest Posts</h2></div>
+        <ul class="list-unstyled blog-latest-posts margin-bottom-50">
+          <li *ngFor='let post of latest_posts'>
+            <h3><a (click)='showPost(post.idx)'>{{ post.title }}</a></h3>
+            <small>{{ post.date }} / <a>{{ post.category }}</a></small>
+          </li>
+        </ul>
+        <div class="headline-v2 bg-color-light"><h2>Categories</h2></div>
+        <ul class="list-inline tags-v2 margin-bottom-50">
+          <li><a routerLink='/board/notice' data-_initScroll8Nav>Notice</a></li>
+          <li><a routerLink='/board/news' data-_initScroll8Nav>News</a></li>
+          <li><a routerLink='/board/seminar' data-_initScroll8Nav>Seminar</a></li>
+          <li><a routerLink='/board/photo' data-_initScroll8Nav>Photo</a></li>
+          <li><a routerLink='/board/overall' data-_initScroll8Nav>Overall</a></li>
+        </ul>
+        <div class="headline-v2 bg-color-light"><h2>Photostream</h2></div>
+        <ul class="list-inline blog-photostream margin-bottom-50">
+          <li *ngFor='let img of thumbnails.slice(0, 9)'>
+            <span>
+              <img class="img-responsive" src="{{ img }}">
+            </span>
+          </li>
+        </ul>
+      </div>
+      <div id='js-nav--bottom' class='-nav'>
         <div class="headline-v2 bg-color-light"><h2>Latest Posts</h2></div>
         <ul class="list-unstyled blog-latest-posts margin-bottom-50">
           <li *ngFor='let post of latest_posts'>
