--- a/client/src/app/board/board.component.scss
+++ b/client/src/app/board/board.component.scss
@@ -22,7 +22,6 @@
 
 #daba-board {
   min-height: 800px;
-  padding: 30px;
   .daba-post-box {
     box-shadow: 0.5px 0.5px 2px #ddd;
     & > div {
@@ -76,15 +75,11 @@
       }
     }
   }
-  .-preview, .-preview-cover {
+  .-preview {
     position: relative;
     height: 60px;
     overflow: hidden;
     margin: 0;
-  }
-  .-preview-cover {
-    margin-top: -60px;
-    background-image: linear-gradient(0deg, white, rgba(0, 0, 0, 0));
   }
 }
 
