--- a/client/src/app/main/main.component.html
+++ b/client/src/app/main/main.component.html
@@ -1,7 +1,6 @@
 <!--=== Slider ===-->
 <div class="slider-inner">
-  <div id="da-slider" class="da-slider"
-  style="background-image: url('assets/img/breadcrumbs/hanasquare.jpg')">
+  <div id="da-slider" class="da-slider">
     <div class="da-slide">
       <h2><i>DATA SCIENCE &</i> <br /> <i>BUSSINESS ANALYTICS</i> <br /> <i>LAB.</i></h2>
       <p>
@@ -18,7 +17,22 @@
         </div>
       </div>
     </div>
-
+    <div class="da-slide">
+      <h2><i>DATA SCIENCE &</i><br/><i>BUSSINESS ANALYTICS</i><br/><i>LAB.</i></h2>
+      <p>
+        <i>School of Industrial Management Engineering,</i><br/>
+        <i>College of Engineering,</i><br/>
+        <i>Korea University</i>
+      </p>
+      <div class="da-img">
+        <div *ngFor='let vid of vids'>
+          <img src="https://img.youtube.com/vi/{{vid}}/0.jpg" alt="">
+          <a href="https://youtu.be/{{vid}}" target="_blank">
+            <img src="assets/img/main/play.png" alt="">
+          </a>
+        </div>
+      </div>
+    </div>
   </div>
 </div><!--/slider-->
 <!--=== End Slider ===-->
@@ -78,9 +92,7 @@
           <div class="overflow-hidden">
             <img class="img-responsive" src="{{research.img}}" alt="">
           </div>
-          <a routerLink="/researches" data-_initScroll8Nav class="btn-more">
-            read more +
-          </a>
+          <a routerLink="/researches" data-_initScroll8Nav class="btn-more">read more +</a>
         </div>
         <div class="caption">
           <p>{{research.title}}</p>
@@ -99,12 +111,9 @@
           <div class="overflow-hidden">
             <img class="img-responsive" src="{{project.img}}" alt="">
           </div>
-          <a routerLink="/projects" data-_initScroll8Nav class="btn-more">
-            read more +
-          </a>
+          <a routerLink="/projects" data-_initScroll8Nav class="btn-more">read more +</a>
         </div>
         <div class="caption">
-          <h3>{{project.term}}</h3>
           <p>{{project.title}}</p>
         </div>
       </div>
