--- a/client/src/app/projects/projects.component.html
+++ b/client/src/app/projects/projects.component.html
@@ -11,7 +11,7 @@
 </div>
 <div class="container">
   <div class='row shs-side-nav'>
-    <div class="col-md-3">
+    <div class="col-md-3 -side-col">
       <div id='-nav-blocker'></div>
       <div id='js-nav' class='-nav'>
         <div class="headline-v2"><h2><strong>Korea University<br>(연구책임자)</strong></h2></div>
