--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -148,6 +148,6 @@ iframe[id^='mce']{
     }
   }
   @media (max-width: 991px) {
-    .-nav {display: none;}
+    > .-side-col {display: none;}
   }
 }
