--- a/client/src/app/board/board.component.html
+++ b/client/src/app/board/board.component.html
@@ -152,7 +152,7 @@
       <br>
     </div>
 
-    <div class="col-md-3">
+    <div class="col-md-3 -side-col">
       <div id='js-nav' class='-nav'>
         <div class="headline-v2 bg-color-light"><h2>Latest Posts</h2></div>
         <ul class="list-unstyled blog-latest-posts margin-bottom-50">
