--- a/client/src/app/board/board.component.html
+++ b/client/src/app/board/board.component.html
@@ -178,7 +178,7 @@
           </li>
         </ul>
       </div>
-      <div id='js-nav--top' class='-nav'>
+      <div id='js-nav--top' class='-nav js-on'>
         <div class="headline-v2 bg-color-light"><h2>Latest Posts</h2></div>
         <ul class="list-unstyled blog-latest-posts margin-bottom-50">
           <li *ngFor='let post of latest_posts'>
