--- a/client/src/app/projects/projects.component.html
+++ b/client/src/app/projects/projects.component.html
@@ -30,7 +30,7 @@
           </ng-container>
         </div>
       </div>
-      <div id='js-nav--top' class='-nav'>
+      <div id='js-nav--top' class='-nav js-on'>
         <div class="headline-v2"><h2><strong>Korea University<br>(연구책임자)</strong></h2></div>
         <ul *ngFor='let datas of idx2datas; let idx=index' [attr.data-page]='idx+1' class="list-unstyled blog-trending js-titles">
           <li *ngFor='let data of datas'>
