--- a/client/src/app/uploader/uploader.component.html
+++ b/client/src/app/uploader/uploader.component.html
@@ -29,7 +29,7 @@
         <ul>
           <h2><br>파일 업로드 가이드</h2>
           <li>
-            비디오 및 음성 멀티미디어
+            비디오 및 고용량 멀티미디어
             <ul>
               <li>Youtube</li>
               <li>게시물의 공유 링크를 이용합니다.</li>
@@ -45,9 +45,7 @@
           <li>
             이미지
             <ul>
-              <li>자유롭게 에디터를 이용해 삽입</li>
-              <li>클라이언트와 구글 스크립트를 이용해 자동으로 업로드 됨</li>
-              <li>업로드 위치는 Google Drive에서 dsba.korea.ac.kr/imgs 폴더</li>
+              <li>url을 이용해 에디터를 통해 삽입</li>
             </ul>
           </li>
         </ul>
