--- a/client/src/app/board/board.component.html
+++ b/client/src/app/board/board.component.html
@@ -4,22 +4,72 @@
     <h1>BOARD</h1>
   </div>
 </div>
-
 <div *ngIf='loading_status' id='dsba-board-loading-box'></div>
-
 <div class="container content-sm">
   <div class="row shs-side-nav">
+    <div class="col-md-3 -side-col">
+      <div id='js-nav' class='-nav'>
+        <div class="headline-v2 bg-color-light"><h2>Categories</h2></div>
+        <ul class="list-inline tags-v2 margin-bottom-50">
+          <li><a routerLink='/board/notice' data-_initScroll8Nav>Notice</a></li>
+          <li><a routerLink='/board/news' data-_initScroll8Nav>News</a></li>
+          <li><a routerLink='/board/seminar' data-_initScroll8Nav>Seminar</a></li>
+          <li><a routerLink='/board/photo' data-_initScroll8Nav>Photo</a></li>
+          <li><a routerLink='/board/overall' data-_initScroll8Nav>Overall</a></li>
+        </ul>
+        <div class="headline-v2 bg-color-light"><h2>Photostream</h2></div>
+        <ul class="list-inline blog-photostream margin-bottom-50">
+          <li *ngFor='let img of imgs.slice(0, 15)'>
+            <span>
+              <img class="img-responsive" src="{{ img }}">
+            </span>
+          </li>
+        </ul>
+      </div>
+      <div id='js-nav--top' class='-nav js-on'>
+        <div class="headline-v2 bg-color-light"><h2>Categories</h2></div>
+        <ul class="list-inline tags-v2 margin-bottom-50">
+          <li><a routerLink='/board/notice' data-_initScroll8Nav>Notice</a></li>
+          <li><a routerLink='/board/news' data-_initScroll8Nav>News</a></li>
+          <li><a routerLink='/board/seminar' data-_initScroll8Nav>Seminar</a></li>
+          <li><a routerLink='/board/photo' data-_initScroll8Nav>Photo</a></li>
+          <li><a routerLink='/board/overall' data-_initScroll8Nav>Overall</a></li>
+        </ul>
+        <div class="headline-v2 bg-color-light"><h2>Photostream</h2></div>
+        <ul class="list-inline blog-photostream margin-bottom-50">
+          <li *ngFor='let img of imgs.slice(0, 15)'>
+            <span>
+              <img class="img-responsive" src="{{ img }}">
+            </span>
+          </li>
+        </ul>
+      </div>
+      <div id='js-nav--bottom' class='-nav'>
+        <div class="headline-v2 bg-color-light"><h2>Categories</h2></div>
+        <ul class="list-inline tags-v2 margin-bottom-50">
+          <li><a routerLink='/board/notice' data-_initScroll8Nav>Notice</a></li>
+          <li><a routerLink='/board/news' data-_initScroll8Nav>News</a></li>
+          <li><a routerLink='/board/seminar' data-_initScroll8Nav>Seminar</a></li>
+          <li><a routerLink='/board/photo' data-_initScroll8Nav>Photo</a></li>
+          <li><a routerLink='/board/overall' data-_initScroll8Nav>Overall</a></li>
+        </ul>
+        <div class="headline-v2 bg-color-light"><h2>Photostream</h2></div>
+        <ul class="list-inline blog-photostream margin-bottom-50">
+          <li *ngFor='let img of imgs.slice(0, 15)'>
+            <span>
+              <img class="img-responsive" src="{{ img }}">
+            </span>
+          </li>
+        </ul>
+      </div>
+    </div>
     <div class="col-md-9" id='daba-board'>
       <ng-container *ngIf='post'>
         <ng-container *ngIf='updating_status'>
           <div class='daba-post-box'>
             <div class="blog margin-bottom-40">
-              <a (click)='hidePost()'>
-                <div class='dsba-back-btn'><span>←</span></div>
-              </a>
-              <a (click)='deletePost()'>
-                <div class='dsba-delete-btn'></div>
-              </a>
+              <a (click)='hidePost()'><span id='-back-btn'>back</span></a>
+              <a (click)='deletePost()'><span id='-delete-btn'>delete</span></a>
               <h2>
                 <input [(ngModel)]="updating_title" id='dsba-title-editor' type="text">
               </h2>
@@ -56,9 +106,7 @@
           </ul>
           <div class='daba-post-box'>
             <div class="blog margin-bottom-40">
-              <a (click)='hidePost()'>
-                <div class='dsba-back-btn'><span>←</span></div>
-              </a>
+              <a (click)='hidePost()'><span id='-back-btn'>back</span></a>
               <h2>{{ post.title }}</h2>
               <div class="blog-post-tags">
                 <ul class="list-unstyled list-inline blog-info">
@@ -73,19 +121,11 @@
                   <li><i class="fa fa-tags"></i> {{ post.category }}</li>
                 </ul>
               </div>
-              <div *ngFor='let img of post.images' class='dsba-post-image'>
-                <a href="{{ img }}" class="fancybox img-hover-v2">
-                  <span>
-                    <img class="img-responsive" src="{{ img }}">
-                  </span>
-                </a>
-              </div>
               <textarea data-editor='r'>{{ post.content }}</textarea>
             </div>
           </div>
         </ng-container>
       </ng-container>
-
       <ul *ngIf='!post' class="pager pager-v3 pager-sm no-margin-bottom">
         <li class="previous">
           <a (click)='turnPage(-1)'>← Newer</a>
@@ -99,43 +139,32 @@
       </ul>
       <br>
       <div *ngFor='let post of post_group'>
+        <ul class="list-inline">
+          <li>{{ post.writer }}</li>
+          <li>In {{ post.category }}</li>
+          <li>{{ post.date }}</li>
+        </ul>
         <div *ngIf='!post.thumbnail' class="row">
-          <div class="col-sm-10 news-v3">
+          <div class="col-sm-12 news-v3">
             <div class="news-v3-in-sm no-padding">
-              <ul class="list-inline posted-info">
-                <li>{{ post.writer }}</li>
-                <li>In {{ post.category }}</li>
-                <li>{{ post.date }}</li>
-              </ul>
-              <h2>
-                <a (click)='showPost(post.idx)' data-_scrollToContent>
-                  {{ post.title }}
-                </a>
-              </h2>
+              <h2><a (click)='showPost(post.idx)' data-_scrollToContent>
+                {{ post.title }}
+              </a></h2>
               <p [innerHTML]="post.preview" class="-preview"></p>
             </div>
           </div>
         </div>
-        <div *ngIf='post.thumbnail' class="row dsba-post-with-photo">
-          <div class="col-sm-7 news-v3">
+        <div *ngIf='post.thumbnail' class="row">
+          <div class="col-sm-9 news-v3">
             <div class="news-v3-in-sm no-padding">
-              <ul class="list-inline posted-info">
-                <li>{{ post.writer }}</li>
-                <li>In {{ post.category }}</li>
-                <li>{{ post.date }}</li>
-              </ul>
-              <h2>
-                <a (click)='showPost(post.idx)' data-_scrollToContent>
-                  {{ post.title }}
-                </a>
-              </h2>
+              <h2><a (click)='showPost(post.idx)' data-_scrollToContent>
+                {{ post.title }}
+              </a></h2>
               <p [innerHTML]="post.preview" class="-preview"></p>
             </div>
           </div>
-          <div class="col-sm-4 sm-margin-bottom-20">
-            <div class="responsive-video">
-              <img src="{{ post.thumbnail }}">
-            </div>
+          <div class="col-sm-3">
+            <img class='-thumbnail-img' src="{{ post.thumbnail }}">
           </div>
         </div>
         <div class="clearfix"><hr></div>
@@ -150,84 +179,6 @@
         </li>
       </ul>
       <br>
-    </div>
-
-    <div class="col-md-3 -side-col">
-      <div id='js-nav' class='-nav'>
-        <div class="headline-v2 bg-color-light"><h2>Latest Posts</h2></div>
-        <ul class="list-unstyled blog-latest-posts margin-bottom-50">
-          <li *ngFor='let post of latest_posts'>
-            <h3><a (click)='showPost(post.idx)'>{{ post.title }}</a></h3>
-            <small>{{ post.date }} / <a>{{ post.category }}</a></small>
-          </li>
-        </ul>
-        <div class="headline-v2 bg-color-light"><h2>Categories</h2></div>
-        <ul class="list-inline tags-v2 margin-bottom-50">
-          <li><a routerLink='/board/notice' data-_initScroll8Nav>Notice</a></li>
-          <li><a routerLink='/board/news' data-_initScroll8Nav>News</a></li>
-          <li><a routerLink='/board/seminar' data-_initScroll8Nav>Seminar</a></li>
-          <li><a routerLink='/board/photo' data-_initScroll8Nav>Photo</a></li>
-          <li><a routerLink='/board/overall' data-_initScroll8Nav>Overall</a></li>
-        </ul>
-        <div class="headline-v2 bg-color-light"><h2>Photostream</h2></div>
-        <ul class="list-inline blog-photostream margin-bottom-50">
-          <li *ngFor='let img of thumbnails.slice(0, 9)'>
-            <span>
-              <img class="img-responsive" src="{{ img }}">
-            </span>
-          </li>
-        </ul>
-      </div>
-      <div id='js-nav--top' class='-nav js-on'>
-        <div class="headline-v2 bg-color-light"><h2>Latest Posts</h2></div>
-        <ul class="list-unstyled blog-latest-posts margin-bottom-50">
-          <li *ngFor='let post of latest_posts'>
-            <h3><a (click)='showPost(post.idx)'>{{ post.title }}</a></h3>
-            <small>{{ post.date }} / <a>{{ post.category }}</a></small>
-          </li>
-        </ul>
-        <div class="headline-v2 bg-color-light"><h2>Categories</h2></div>
-        <ul class="list-inline tags-v2 margin-bottom-50">
-          <li><a routerLink='/board/notice' data-_initScroll8Nav>Notice</a></li>
-          <li><a routerLink='/board/news' data-_initScroll8Nav>News</a></li>
-          <li><a routerLink='/board/seminar' data-_initScroll8Nav>Seminar</a></li>
-          <li><a routerLink='/board/photo' data-_initScroll8Nav>Photo</a></li>
-          <li><a routerLink='/board/overall' data-_initScroll8Nav>Overall</a></li>
-        </ul>
-        <div class="headline-v2 bg-color-light"><h2>Photostream</h2></div>
-        <ul class="list-inline blog-photostream margin-bottom-50">
-          <li *ngFor='let img of thumbnails.slice(0, 9)'>
-            <span>
-              <img class="img-responsive" src="{{ img }}">
-            </span>
-          </li>
-        </ul>
-      </div>
-      <div id='js-nav--bottom' class='-nav'>
-        <div class="headline-v2 bg-color-light"><h2>Latest Posts</h2></div>
-        <ul class="list-unstyled blog-latest-posts margin-bottom-50">
-          <li *ngFor='let post of latest_posts'>
-            <h3><a (click)='showPost(post.idx)'>{{ post.title }}</a></h3>
-            <small>{{ post.date }} / <a>{{ post.category }}</a></small>
-          </li>
-        </ul>
-        <div class="headline-v2 bg-color-light"><h2>Categories</h2></div>
-        <ul class="list-inline tags-v2 margin-bottom-50">
-          <li><a routerLink='/board/notice' data-_initScroll8Nav>Notice</a></li>
-          <li><a routerLink='/board/news' data-_initScroll8Nav>News</a></li>
-          <li><a routerLink='/board/seminar' data-_initScroll8Nav>Seminar</a></li>
-          <li><a routerLink='/board/photo' data-_initScroll8Nav>Photo</a></li>
-          <li><a routerLink='/board/overall' data-_initScroll8Nav>Overall</a></li>
-        </ul>
-        <div class="headline-v2 bg-color-light"><h2>Photostream</h2></div>
-        <ul class="list-inline blog-photostream margin-bottom-50">
-          <li *ngFor='let img of thumbnails.slice(0, 9)'>
-            <span>
-              <img class="img-responsive" src="{{ img }}">
-            </span>
-          </li>
-        </ul>
-      </div>
     </div>
   </div>
 </div>
