--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -74,56 +74,6 @@
           </div><!--/col-md-3-->
           <!-- End About -->
 
-          <!-- Latest -->
-          <div class="col-md-3 md-margin-bottom-40">
-            <div class="posts">
-              <div class="headline"><h2>Latest Posts</h2></div>
-              <ul class="list-unstyled latest-list">
-                <li>
-                  <a href="#">2018 대한산업공학회 춘계학술대회 - 손규빈</a>
-                  <small>May 8, 2014</small>
-                </li>
-                <li>
-                  <a href="#">17. 01. 23 NC soft AI center workshop – 박재선</a>
-                  <small>June 23, 2014</small>
-                </li>
-                <li>
-                  <a href="#">[DeepNLP]1&2. Introduction & word vector</a>
-                  <small>September 15, 2014</small>
-                </li>
-              </ul>
-            </div>
-          </div><!--/col-md-3-->
-          <!-- End Latest -->
-
-          <!-- Link List -->
-          <div class="col-md-3 md-margin-bottom-40">
-            <div class="headline"><h2>Useful Links</h2></div>
-            <ul class="list-unstyled link-list">
-              <li>
-                <a routerLink='members/overall'>members</a>
-                <i class="fa fa-angle-right"></i>
-              </li>
-              <li>
-                <a routerLink='researches'>researches</a>
-                <i class="fa fa-angle-right"></i>
-              </li>
-              <li>
-                <a routerLink='publications'>publications</a>
-                <i class="fa fa-angle-right"></i>
-              </li>
-              <li>
-                <a routerLink='projects'>projects</a>
-                <i class="fa fa-angle-right"></i>
-              </li>
-              <li>
-                <a routerLink='boards'>activities</a>
-                <i class="fa fa-angle-right"></i>
-              </li>
-            </ul>
-          </div><!--/col-md-3-->
-          <!-- End Link List -->
-
           <!-- Address -->
           <div class="col-md-3 md-margin-bottom-40">
             <div class="headline"><h2>Contact Us</h2></div>
@@ -146,9 +96,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <p>
-              <a href="http://163.152.174.143" target="black_">2018 &copy; Data Science & Business Analytics Lab.</a>
-            </p>
+            <p>2018 &copy; Data Science & Business Analytics Lab.</p>
           </div>
         </div>
       </div>
